# BSc-thesis-19-20

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: generate  generate.cpp  kontizi.fasta  ocitanja.fasta  ocitanja.fastq  output.fasta  ovlpKontOcit.paf  ovlpOcitOcit.paf  referenca.fasta  ukupno.fasta
sequences/: CMakeLists.txt  sequences.cpp  sequences.h  sequences.hpp
src/: gradi.cpp  gradi.h  graf.h  graf_a.cpp  graf_im.cpp  hera.h  kontiziV.fasta  main.cpp  ocitanjaV.fasta  osnove.h  output.fasta  ovlpKO.paf  ovlpOO.paf  parsiranje.cpp  parsiranje.h  preklapanje.cpp  preklapanje.h  referenca.fasta
version_graphmap/: create_transcript_bins.py  main.sh  polish.sh  reads_selection.sh  split_mapped_and_unmapped.py
version_ram/: clustering.py  create_transcript_bins.py  main.sh  polish.sh  reads_selection.sh  split_mapped_and_unmapped.py
